--- a/UI.WebMvcCore/Views/Admin/UserRoles.cshtml
+++ b/UI.WebMvcCore/Views/Admin/UserRoles.cshtml
@@ -57,7 +57,7 @@
             if (id != null) {
 
                 $('#roleId_' + id).val(e.options[e.selectedIndex].value);
-                alert($('#roleId_' + id).val())
+                //alert($('#roleId_' + id).val())
             }
         }
             @if (ViewBag.kayitDurum != null)
