--- a/UI.WebMvcCore/Views/FactoryAdmin/UserRoles.cshtml
+++ b/UI.WebMvcCore/Views/FactoryAdmin/UserRoles.cshtml
@@ -34,12 +34,12 @@
 
                                         }
                                     </select>
-                                    <input type="hidden" value="" name="roleId" id="roleId_@usr.Id" />
                                 </td>
                                 <td>
+                                    <input type="hidden" value="" name="roleId" id="roleId_@usr.Id" />
                                     <input type="hidden" value="@usr.Id" name="userId" />
                                     <button type="submit" class="form-group btn btn-secondary">Kaydet</button>
-                                    <button type="submit" class="form-group btn btn-danger">Sil</button>
+                                    <button type="submit" class="form-group btn btn-danger" disabled>Sil</button>
                                 </td>
                             </tr>
                         }
