--- a/UI.WebMvcCore/Areas/Identity/Pages/Account/Login.cshtml
+++ b/UI.WebMvcCore/Areas/Identity/Pages/Account/Login.cshtml
@@ -49,7 +49,7 @@
         </section>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <section>
+        <section style="display:none">
             <h4>Giriş yapmak için başka bir hizmet kullan.</h4>
             <hr />
             @{
