--- a/UI.WebMvcCore/Views/Home/Index.cshtml
+++ b/UI.WebMvcCore/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome Brader</h1>
-    <p>Learn about <a href="https://localhost:5001/Admin/UserRoles">Admin</a>.</p>
+    <p>Learn about <a href="https://localhost:5001/FactoryAdmin/UserRoles">Admin</a>.</p>
 </div>
