--- a/UI.WebMvcCore/Views/Shared/_FactoryAdminLayout.cshtml
+++ b/UI.WebMvcCore/Views/Shared/_FactoryAdminLayout.cshtml
@@ -58,7 +58,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - <i>mimar</i><b>Soft</b> - <a asp-area="" asp-controller="Home" asp-action="Privacy">Gizlilik Politikamız</a>
+            &copy; @DateTime.Now.Year - <i>mimar</i><b>Soft</b> @*- <a asp-area="" asp-controller="Home" asp-action="Privacy">Gizlilik Politikamız</a>*@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
