--- a/UI.WebMvcCore/Views/Shared/_LayoutMimarSoft.cshtml
+++ b/UI.WebMvcCore/Views/Shared/_LayoutMimarSoft.cshtml
@@ -85,7 +85,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - <i>mimar</i><b>Soft</b> - <a asp-controller="Home" asp-action="Privacy">Gizlilik Politikamız</a>
+            &copy; @DateTime.Now.Year - <i>mimar</i><b>Soft</b> @*- <a asp-controller="Home" asp-action="Privacy">Gizlilik Politikamız</a>*@
         </div>
     </footer>
 
