--- a/UI.WebMvcCore/Pages/Shared/_Layout.cshtml
+++ b/UI.WebMvcCore/Pages/Shared/_Layout.cshtml
@@ -22,9 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Anasayfa</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Gizlilik Plitikamız</a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - <i>mimar</i><b>Soft</b> - <a asp-area="" asp-page="/Privacy">Gizlilik Politikamız</a>
+            &copy; @DateTime.Now.Year - <i>mimar</i><b>Soft</b> @*- <a asp-area="" asp-page="/Privacy">Gizlilik Politikamız</a>*@
         </div>
     </footer>
 
