--- a/UI.WebMvcCore/Views/Shared/_LayoutMimarSoft.cshtml
+++ b/UI.WebMvcCore/Views/Shared/_LayoutMimarSoft.cshtml
@@ -22,9 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Anasayfa</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Demo">Demo</a>
-                        </li>
+                        </li>*@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Calculate" asp-action="TrendCalculate">Trend Lüks</a>
                         </li>
