--- a/UI.WebMvcCore/Views/Calculate/IsiCamSistem.cshtml
+++ b/UI.WebMvcCore/Views/Calculate/IsiCamSistem.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" style="display:none">
             <label>Balkon Tipi</label>
             <select class="form-control form-select" asp-for="BalkonMalzemeModeli" id="balkonModelSecin" tabindex="1">
                 <option selected>Balkon Tipi Seçiniz</option>
@@ -17,7 +17,7 @@
             </select>
         </div>
     </div>
-    <hr />
+    <hr style="display:none" />
 
     <form asp-action="IsiCamSistem" asp-controller="Calculate" method="post">
 
