--- a/UI.WebMvcCore/Views/Calculate/IsiCamSistem.cshtml
+++ b/UI.WebMvcCore/Views/Calculate/IsiCamSistem.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-4" style="display:none">
+        <div class="col-sm-12 col-md-4" style="display:none">
             <label>Balkon Tipi</label>
             <select class="form-control form-select" asp-for="BalkonMalzemeModeli" id="balkonModelSecin" tabindex="1">
                 <option selected>Balkon Tipi Seçiniz</option>
@@ -23,7 +23,7 @@
 
         <input name="BalkonMalzemeModeli" hidden value="ISI Camlı Sistem" />
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-sm-12 col-md-4">
                 <label asp-for="ProfileLength">Profil Boy</label>
                 <select class="form-control form-select" multiple id="profilBoySelect" asp-for="ProfileLength">
                 </select>
@@ -36,7 +36,7 @@
                 </div>
                 <br />
             </div>
-            <div class="col-md-4">
+            <div class="col-sm-12 col-md-4">
                 <label asp-for="GlassCount">Cam Adet</label>
                 <select class="form-control form-select" multiple id="camAdetSelect" asp-for="GlassCount">
                 </select>
@@ -49,7 +49,7 @@
                 </div>
                 <br />
             </div>
-            <div class="col-md-4">
+            <div class="col-sm-12 col-md-4">
                 <label asp-for="ProfileAngle">Profil Açı</label>
                 <select class="form-control" multiple id="profilAciSelect" asp-for="ProfileAngle">
                 </select>
@@ -87,6 +87,7 @@
 
     <br />
 </div>
+
 <script src="~/js/Calculate.js"></script>
 
 @section Scripts {
