--- a/UI.WebMvcCore/Views/Shared/Error.cshtml
+++ b/UI.WebMvcCore/Views/Shared/Error.cshtml
@@ -1,8 +1,8 @@
 ﻿@model UI.WebMvcCore.Models.ViewModels.ErrorViewModel
 @{ ViewData["Title"] = "Error"; }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">Hata.</h1>
+<h2 class="text-danger">İsteğiniz işlenirken bir hata oluştu.</h2>
 
 @if (Model.ShowRequestId)
 {
@@ -10,13 +10,14 @@
         <strong>Request ID:</strong> <code>@Model.RequestId</code>
     </p>}
 
-<h3>Development Mode</h3>
+<h3>Geliştirme Modu</h3>
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
+    <strong>Geliştirme</strong> ortamına geçiş, oluşan hata hakkında daha ayrıntılı bilgi görüntüler.
 </p>
 <p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
+    <strong>Geliştirme ortamı, dağıtılan uygulamalar için etkinleştirilmemelidir.</strong>
+    İstisnalardan son kullanıcılara kadar hassas bilgilerin görüntülenmesine neden olabilir.
+    Yerel hata ayıklama için, <strong>ASPNETCORE_ENVIRONMENT</strong> ortam değişkenini <strong>Geliştirme</strong> olarak ayarlayarak <strong>Geliştirme</strong> ortamını etkinleştirin
+    ve uygulamayı yeniden başlatma.
 </p>
+
