--- a/UI.WebMvcCore/Views/Shared/_LayoutMimarSoft.cshtml
+++ b/UI.WebMvcCore/Views/Shared/_LayoutMimarSoft.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-ozel2 border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i>mimar</i><b>Soft</b></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i>Başer</i><b>Makine</b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Anasayfa</a>
+                            <a class="nav-link text-dark" asp-controller="Calculate" asp-action="TrendCalculate">Anasayfa</a>
                         </li>
                         @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Demo">Demo</a>
