6 Ekim 2021 03:54 CSS select option heigth setting chrome

--- a/UI.WebMvcCore/Areas/Identity/Pages/Account/Register.cshtml
+++ b/UI.WebMvcCore/Areas/Identity/Pages/Account/Register.cshtml
@@ -37,7 +37,7 @@
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
-                    <div>
+                    <div style="display:none">
                         <p>
                             Yapılandırılmış harici kimlik doğrulama hizmeti yok. <a href="https://go.microsoft.com/fwlink/?LinkID=532715"> Bu makaleye </a> bakın
                             Dış hizmetler aracılığıyla oturum açmayı desteklemek için bu ASP.NET uygulamasını kurma hakkında ayrıntılar için.
