--- a/UI.WebMvcCore/Views/Calculate/TrendCalculate.cshtml
+++ b/UI.WebMvcCore/Views/Calculate/TrendCalculate.cshtml
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-4">
                 <label asp-for="ProfileLength">Profil Boy</label>
-                <select class="form-control form-select" multiple id="profilBoySelect" asp-for="ProfileLength">
+                <select class="form-control form-select" multiple id="profilBoySelect" asp-for="ProfileLength" size="5">
                 </select>
 
                 <hr />
@@ -38,7 +38,7 @@
             </div>
             <div class="col-sm-12 col-md-4">
                 <label asp-for="GlassCount">Cam Adet</label>
-                <select class="form-control form-select" multiple id="camAdetSelect" asp-for="GlassCount">
+                <select class="form-control form-select" multiple id="camAdetSelect" asp-for="GlassCount" size="5">
                 </select>
 
                 <hr />
@@ -51,7 +51,7 @@
             </div>
             <div class="col-sm-12 col-md-4">
                 <label asp-for="ProfileAngle">Profil Açı</label>
-                <select class="form-control" multiple id="profilAciSelect" asp-for="ProfileAngle">
+                <select class="form-control" multiple id="profilAciSelect" asp-for="ProfileAngle"  multuple>
                 </select>
 
                 <hr />
