--- a/UI.WebMvcCore/Areas/Identity/Pages/Account/Login.cshtml
+++ b/UI.WebMvcCore/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,7 +10,7 @@
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h4 style="display:none">Giriş yapmak için yerel bir hesap kullanın.</h4>
+                <h4>Giriş yapmak için yerel bir hesap kullanın.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -49,13 +49,13 @@
         </section>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <section style="display:none">
-            <h4>Giriş yapmak için başka bir hizmet kullan.</h4>
-            <hr />
+        <section>
+            <h4 style="display:none">Giriş yapmak için başka bir hizmet kullan.</h4>
+            <hr  style="display:none"/>
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
-                    <div>
+                    <div style="display:none">
                         <p>
                             Yapılandırılmış harici kimlik doğrulama hizmeti yok. <a href="https://go.microsoft.com/fwlink/?LinkID=532715"> Bu makaleye </a> bakın
                             Dış hizmetler aracılığıyla oturum açmayı desteklemek için bu ASP.NET uygulamasını kurma hakkında ayrıntılar içerir.
