--- a/UI.WebMvcCore/Pages/Shared/_Layout.cshtml
+++ b/UI.WebMvcCore/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index"><i>Başer</i><b>Makine</b></a>
+                <a class="navbar-brand" asp-area="" asp-page="Calculate/Index"><i>Başer</i> <b>Makine</b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,12 +19,33 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Anasayfa</a>
+                            <a class="nav-link text-dark" asp-controller="Calculate" asp-action="Index">Anasayfa</a>
                         </li>
-                        @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Gizlilik Plitikamız</a>
-                        </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Calculate" asp-action="TrendCalculate">Trend Lüks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Calculate" asp-action="IsiCamSistem">ISI Cam</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Calculate" asp-action="SurmeSistem">Sürme</a>
+                        </li>
+
+                        @{ if (User.Identity.IsAuthenticated)
+                            {
+                                var role = User.Claims.Where(c => c.Type == System.Security.Claims.ClaimTypes.Role).FirstOrDefault(x => x.Value == "AKR3P" || x.Value == "YÖNETİM" || x.Value == "FABRİKA");
+                                var result = (role == null) ? "" : role.Value;
+                                if (result == "AKR3P" || result == "YÖNETİM" || result == "FABRİKA")
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-controller="FactoryAdmin" asp-action="UserRoles">Admin</a>
+                                    </li>
+                                }
+                            }
+                        }
+
                     </ul>
                 </div>
             </div>
