--- a/UI.WebMvcCore/Views/Shared/_FactoryAdminLayout.cshtml
+++ b/UI.WebMvcCore/Views/Shared/_FactoryAdminLayout.cshtml
@@ -4,24 +4,27 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - FABRİKA</title>
-    <link rel="stylesheet" href="./lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./css/site.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body class="bg-img bg-img-admin">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-blue-100 border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i>Başer</i><b>Makine</b></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Calculate" asp-action="Index"><i>Başer</i> <b>Makine</b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Calculate" asp-action="Index">Anasayfa</a>
+                        </li>
                         @{ if (User.Identity.IsAuthenticated)
                             {
-                                var role = User.Claims.Where(c => c.Type == System.Security.Claims.ClaimTypes.Role).FirstOrDefault(x => x.Value == "FABRİKA")?.Value;
-                                if (role == "FABRİKA")
+                                var role = User.Claims.Where(c => c.Type == System.Security.Claims.ClaimTypes.Role).FirstOrDefault(x => x.Value == "AKR3P")?.Value;
+                                if (role == "AKR3P")
                                 {
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="index">Yönetim</a>
@@ -39,8 +42,8 @@
                                         <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">CreateUserCompany</a>
                                     </li>
 
-                                    }
                                 }
+                            }
                         }
                     </ul>
                     <div class="float-right">
@@ -61,9 +64,9 @@
             &copy; @DateTime.Now.Year - <i>mimar</i><b>Soft</b> @*- <a asp-area="" asp-controller="Home" asp-action="Privacy">Gizlilik Politikamız</a>*@
         </div>
     </footer>
-    <script src="./lib/jquery/dist/jquery.min.js"></script>
-    <script src="./lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
